# MAI_Practice_price_tracking

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
backend/: .dockerignore  .env_example  Dockerfile  Dockerfile.beat  Dockerfile.worker  pyproject.toml  requirements.txt
backend/src/: alembic.ini  celerybeat-schedule  main.py  scrapy.cfg
backend/src/api/: alerts.py  analytics.py  auth.py  products.py  settings.py  telegram.py  user.py
backend/src/celery/: app.py
backend/src/celery/tasks/: alerts.py  maintenance.py  parsing.py
backend/src/celery_work/: app.py
backend/src/celery_work/tasks/: alerts.py  maintenance.py  parsing.py
backend/src/core/: hashid.py  logger.py  security.py
backend/src/database/: .dockerignore  .gitignore  database.py  docker-compose.yml  main_db.py  models.py
backend/src/database/migrations/: env.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 1cfb98fa0baf_add_parse_interval_and_last_parse_at_to_.py  2bd51154469c_merge_two_heads.py  4af3c42d3b3a_add_shops_data.py  6c0afe298735_initial_tables.py  a1b2c3d4e5f6_add_telegram_settings_to_users.py  ac468089755c_merge_multiple_heads.py  alerts_table_initial.py  c8535b0f3c07_merge_two_heads.py  cdd971c71193_fix_datetime.py  d950766e9e0b_update_db_for_table_shop_and_product.py  f1a2b3c4d5e6_add_notified_at_to_subscriptions.py
backend/src/repositories/: analytics_repository.py  celery_sync_repository.py  price_history_repository.py  product_repository.py  settings_repository.py  user_repository.py
backend/src/schemas/: analytics.py  auth.py  products.py  settings.py
backend/src/scraper/: model.py  protocol.py  settings.py
backend/src/scraper/sourses/: citilink.py
backend/src/scraper/spiders/: parser.py
backend/src/services/: analytics_service.py  email_service.py  export_service.py  price_service.py  product_service.py  telegram_handler.py  telegram_service.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
tests/: .coveragerc  pytest.ini
(+50 files in other folders)
