[project]
name = "mai-price-tracker"
version = "0.1.0"
description = "MAI Price Tracker - отслеживание цен товаров"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary==2.9.11",
    "SQLAlchemy==2.0.48",
    "python-dotenv==1.2.2",
    "alembic==1.18.4",
    "python-multipart==0.0.6",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "asyncpg==0.29.0",
    "scrapy==2.14.2",
    "scrapy-playwright==0.0.46",
    "playwright>=1.40.0",
    "playwright_stealth==2.0.2",
    "hashids",
    "celery[redis]==5.3.4",
    "redis==4.5.4",
    "nest-asyncio==1.6.0",
    "asgiref==3.8.1",
    "twisted==24.11.0",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.uv]